nearly finish mlrEDA functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method(as.data.frame,BenchmarkResult)
 S3method(as.data.frame,Prediction)
 S3method(asROCRPrediction,Prediction)
 S3method(asROCRPrediction,ResamplePrediction)
+S3method(capLargeValues,Task)
+S3method(capLargeValues,data.frame)
 S3method(createDummyFeatures,SupervisedTask)
 S3method(createDummyFeatures,data.frame)
 S3method(downsample,ResampleInstance)
@@ -263,6 +265,10 @@ S3method(setPredictType,BaggingWrapper)
 S3method(setPredictType,BaseEnsemble)
 S3method(setPredictType,BaseWrapper)
 S3method(setPredictType,Learner)
+S3method(summarizeColumns,Task)
+S3method(summarizeColumns,data.frame)
+S3method(summarizeLevels,Task)
+S3method(summarizeLevels,data.frame)
 S3method(trainLearner,BaggingWrapper)
 S3method(trainLearner,CostSensClassifWrapper)
 S3method(trainLearner,CostSensRegrWrapper)
@@ -370,6 +376,7 @@ export(ber)
 export(bootstrapB632)
 export(bootstrapB632plus)
 export(bootstrapOOB)
+export(capLargeValues)
 export(cindex)
 export(configureMlr)
 export(createDummyFeatures)
@@ -489,6 +496,7 @@ export(mcp)
 export(meancosts)
 export(medae)
 export(medse)
+export(mergeFactorLevelsBySize)
 export(mmce)
 export(mse)
 export(multiclass.auc)
@@ -524,6 +532,8 @@ export(smote)
 export(sse)
 export(subsample)
 export(subsetTask)
+export(summarizeColumns)
+export(summarizeLevels)
 export(test.max)
 export(test.mean)
 export(test.median)
