--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,6 +130,8 @@ S3method(makeWrappedModel,CostSensWeightedPairsWrapper)
 S3method(makeWrappedModel,Learner)
 S3method(makeWrappedModel,MulticlassWrapper)
 S3method(makeWrappedModel,OptWrapper)
+S3method(mergeSmallFactorLevels,Task)
+S3method(mergeSmallFactorLevels,data.frame)
 S3method(normalizeFeatures,Task)
 S3method(normalizeFeatures,data.frame)
 S3method(predict,WrappedModel)
@@ -496,7 +498,7 @@ export(mcp)
 export(meancosts)
 export(medae)
 export(medse)
-export(mergeFactorLevelsBySize)
+export(mergeSmallFactorLevels)
 export(mmce)
 export(mse)
 export(multiclass.auc)
