--- a/tutorial/mkdocs.yml
+++ b/tutorial/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: mlr tutorial
 site_dir: html
 repo_url: https://github.com/berndbischl/mlr/
+use_directory_urls: False
 pages:
 - ["index.md", "Home"]
 - ["task.md", "Basics", "Tasks"]
