--- a/NAMESPACE
+++ b/NAMESPACE
@@ -141,6 +141,7 @@ S3method(predictLearner,FilterWrapper)
 S3method(predictLearner,ModelMultiplexer)
 S3method(predictLearner,MulticlassWrapper)
 S3method(predictLearner,PreprocWrapper)
+S3method(predictLearner,StackedLearner)
 S3method(predictLearner,TuneWrapper)
 S3method(predictLearner,classif.IBk)
 S3method(predictLearner,classif.J48)
@@ -263,6 +264,7 @@ S3method(setPredictType,BaggingWrapper)
 S3method(setPredictType,BaseEnsemble)
 S3method(setPredictType,BaseWrapper)
 S3method(setPredictType,Learner)
+S3method(setPredictType,StackedLearner)
 S3method(trainLearner,BaggingWrapper)
 S3method(trainLearner,CostSensClassifWrapper)
 S3method(trainLearner,CostSensRegrWrapper)
@@ -276,6 +278,7 @@ S3method(trainLearner,OverBaggingWrapper)
 S3method(trainLearner,OversampleWrapper)
 S3method(trainLearner,PreprocWrapper)
 S3method(trainLearner,SMOTEWrapper)
+S3method(trainLearner,StackedLearner)
 S3method(trainLearner,TuneWrapper)
 S3method(trainLearner,UndersampleWrapper)
 S3method(trainLearner,WeightedClassesWrapper)
@@ -471,6 +474,7 @@ export(makeRegrTask)
 export(makeResampleDesc)
 export(makeResampleInstance)
 export(makeSMOTEWrapper)
+export(makeStackedLearner)
 export(makeSurvTask)
 export(makeTuneControlCMAES)
 export(makeTuneControlGenSA)
