add new mini function: joinClassLevels

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -432,6 +432,7 @@ export(imputeMode)
 export(imputeNormal)
 export(imputeUniform)
 export(isFailureModel)
+export(joinClassLevels)
 export(learnerArgsToControl)
 export(listFilterMethods)
 export(listLearners)
