--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,8 @@ S3method(isFailureModel,BaggingModel)
 S3method(isFailureModel,CostSensWeightedPairsModel)
 S3method(isFailureModel,MulticlassModel)
 S3method(isFailureModel,WrappedModel)
+S3method(joinClassLevels,ClassifTask)
+S3method(joinClassLevels,data.frame)
 S3method(listLearners,Task)
 S3method(listLearners,character)
 S3method(listLearners,default)
