--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method(as.data.frame,BenchmarkResult)
 S3method(as.data.frame,Prediction)
 S3method(asROCRPrediction,Prediction)
 S3method(asROCRPrediction,ResamplePrediction)
+S3method(capLargeValues,Task)
+S3method(capLargeValues,data.frame)
 S3method(createDummyFeatures,SupervisedTask)
 S3method(createDummyFeatures,data.frame)
 S3method(downsample,ResampleInstance)
@@ -267,6 +269,8 @@ S3method(setPredictType,BaseEnsemble)
 S3method(setPredictType,BaseWrapper)
 S3method(setPredictType,Learner)
 S3method(setPredictType,StackedLearner)
+S3method(summarizeColumns,Task)
+S3method(summarizeColumns,data.frame)
 S3method(trainLearner,BaggingWrapper)
 S3method(trainLearner,CostSensClassifWrapper)
 S3method(trainLearner,CostSensRegrWrapper)
@@ -375,6 +379,7 @@ export(ber)
 export(bootstrapB632)
 export(bootstrapB632plus)
 export(bootstrapOOB)
+export(capLargeValues)
 export(cindex)
 export(configureMlr)
 export(createDummyFeatures)
@@ -496,6 +501,7 @@ export(mcp)
 export(meancosts)
 export(medae)
 export(medse)
+export(mergeFactorLevelsBySize)
 export(mmce)
 export(mse)
 export(multiclass.auc)
@@ -531,6 +537,8 @@ export(smote)
 export(sse)
 export(subsample)
 export(subsetTask)
+export(summarizeColumns)
+export(summarizeLevels)
 export(test.max)
 export(test.mean)
 export(test.median)
