fix travis log option

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ notifications:
   email:
     on_success: change
     on_failure: change
-after_script:
-  - ./travis.sh dump_logs
+after_failure:
+  - ./travis-tool.sh dump_logs
