--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ S3method(makeRLearner,classif.randomForestSRC)
 S3method(makeRLearner,classif.rda)
 S3method(makeRLearner,classif.rpart)
 S3method(makeRLearner,classif.rrlda)
+S3method(makeRLearner,classif.sda)
 S3method(makeRLearner,classif.svm)
 S3method(makeRLearner,cluster.EM)
 S3method(makeRLearner,cluster.SimpleKMeans)
@@ -190,6 +191,7 @@ S3method(predictLearner,classif.randomForestSRC)
 S3method(predictLearner,classif.rda)
 S3method(predictLearner,classif.rpart)
 S3method(predictLearner,classif.rrlda)
+S3method(predictLearner,classif.sda)
 S3method(predictLearner,classif.svm)
 S3method(predictLearner,cluster.EM)
 S3method(predictLearner,cluster.SimpleKMeans)
@@ -333,6 +335,7 @@ S3method(trainLearner,classif.randomForestSRC)
 S3method(trainLearner,classif.rda)
 S3method(trainLearner,classif.rpart)
 S3method(trainLearner,classif.rrlda)
+S3method(trainLearner,classif.sda)
 S3method(trainLearner,classif.svm)
 S3method(trainLearner,cluster.EM)
 S3method(trainLearner,cluster.SimpleKMeans)
