--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ S3method(makeRLearner,classif.svm)
 S3method(makeRLearner,cluster.EM)
 S3method(makeRLearner,cluster.SimpleKMeans)
 S3method(makeRLearner,cluster.XMeans)
+S3method(makeRLearner,cluster.kmeans)
 S3method(makeRLearner,regr.IBk)
 S3method(makeRLearner,regr.blackboost)
 S3method(makeRLearner,regr.cforest)
@@ -196,6 +197,7 @@ S3method(predictLearner,classif.svm)
 S3method(predictLearner,cluster.EM)
 S3method(predictLearner,cluster.SimpleKMeans)
 S3method(predictLearner,cluster.XMeans)
+S3method(predictLearner,cluster.kmeans)
 S3method(predictLearner,regr.IBk)
 S3method(predictLearner,regr.cforest)
 S3method(predictLearner,regr.crs)
@@ -340,6 +342,7 @@ S3method(trainLearner,classif.svm)
 S3method(trainLearner,cluster.EM)
 S3method(trainLearner,cluster.SimpleKMeans)
 S3method(trainLearner,cluster.XMeans)
+S3method(trainLearner,cluster.kmeans)
 S3method(trainLearner,regr.IBk)
 S3method(trainLearner,regr.cforest)
 S3method(trainLearner,regr.crs)
