--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,9 +90,11 @@ S3method(makeRLearner,classif.rpart)
 S3method(makeRLearner,classif.rrlda)
 S3method(makeRLearner,classif.sda)
 S3method(makeRLearner,classif.svm)
+S3method(makeRLearner,cluster.DBScan)
 S3method(makeRLearner,cluster.EM)
 S3method(makeRLearner,cluster.SimpleKMeans)
 S3method(makeRLearner,cluster.XMeans)
+S3method(makeRLearner,cluster.cmeans)
 S3method(makeRLearner,cluster.kmeans)
 S3method(makeRLearner,regr.IBk)
 S3method(makeRLearner,regr.blackboost)
@@ -194,9 +196,11 @@ S3method(predictLearner,classif.rpart)
 S3method(predictLearner,classif.rrlda)
 S3method(predictLearner,classif.sda)
 S3method(predictLearner,classif.svm)
+S3method(predictLearner,cluster.DBScan)
 S3method(predictLearner,cluster.EM)
 S3method(predictLearner,cluster.SimpleKMeans)
 S3method(predictLearner,cluster.XMeans)
+S3method(predictLearner,cluster.cmeans)
 S3method(predictLearner,cluster.kmeans)
 S3method(predictLearner,regr.IBk)
 S3method(predictLearner,regr.cforest)
@@ -339,9 +343,11 @@ S3method(trainLearner,classif.rpart)
 S3method(trainLearner,classif.rrlda)
 S3method(trainLearner,classif.sda)
 S3method(trainLearner,classif.svm)
+S3method(trainLearner,cluster.DBScan)
 S3method(trainLearner,cluster.EM)
 S3method(trainLearner,cluster.SimpleKMeans)
 S3method(trainLearner,cluster.XMeans)
+S3method(trainLearner,cluster.cmeans)
 S3method(trainLearner,cluster.kmeans)
 S3method(trainLearner,regr.IBk)
 S3method(trainLearner,regr.cforest)
