--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,8 +90,10 @@ S3method(makeRLearner,classif.rpart)
 S3method(makeRLearner,classif.rrlda)
 S3method(makeRLearner,classif.sda)
 S3method(makeRLearner,classif.svm)
+S3method(makeRLearner,cluster.Cobweb)
 S3method(makeRLearner,cluster.DBScan)
 S3method(makeRLearner,cluster.EM)
+S3method(makeRLearner,cluster.FarthestFirst)
 S3method(makeRLearner,cluster.SimpleKMeans)
 S3method(makeRLearner,cluster.XMeans)
 S3method(makeRLearner,cluster.cmeans)
@@ -196,8 +198,10 @@ S3method(predictLearner,classif.rpart)
 S3method(predictLearner,classif.rrlda)
 S3method(predictLearner,classif.sda)
 S3method(predictLearner,classif.svm)
+S3method(predictLearner,cluster.Cobweb)
 S3method(predictLearner,cluster.DBScan)
 S3method(predictLearner,cluster.EM)
+S3method(predictLearner,cluster.FarthestFirst)
 S3method(predictLearner,cluster.SimpleKMeans)
 S3method(predictLearner,cluster.XMeans)
 S3method(predictLearner,cluster.cmeans)
@@ -343,8 +347,10 @@ S3method(trainLearner,classif.rpart)
 S3method(trainLearner,classif.rrlda)
 S3method(trainLearner,classif.sda)
 S3method(trainLearner,classif.svm)
+S3method(trainLearner,cluster.Cobweb)
 S3method(trainLearner,cluster.DBScan)
 S3method(trainLearner,cluster.EM)
+S3method(trainLearner,cluster.FarthestFirst)
 S3method(trainLearner,cluster.SimpleKMeans)
 S3method(trainLearner,cluster.XMeans)
 S3method(trainLearner,cluster.cmeans)
