do not use a dot in learner name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ S3method(makeRLearner,classif.blackboost)
 S3method(makeRLearner,classif.boosting)
 S3method(makeRLearner,classif.cforest)
 S3method(makeRLearner,classif.ctree)
+S3method(makeRLearner,classif.cvglmnet)
 S3method(makeRLearner,classif.fnn)
 S3method(makeRLearner,classif.gbm)
 S3method(makeRLearner,classif.geoDA)
@@ -102,6 +103,8 @@ S3method(makeRLearner,regr.IBk)
 S3method(makeRLearner,regr.blackboost)
 S3method(makeRLearner,regr.cforest)
 S3method(makeRLearner,regr.crs)
+S3method(makeRLearner,regr.ctree)
+S3method(makeRLearner,regr.cvglmnet)
 S3method(makeRLearner,regr.earth)
 S3method(makeRLearner,regr.fnn)
 S3method(makeRLearner,regr.gbm)
@@ -126,6 +129,7 @@ S3method(makeRLearner,regr.svm)
 S3method(makeRLearner,surv.CoxBoost)
 S3method(makeRLearner,surv.cforest)
 S3method(makeRLearner,surv.coxph)
+S3method(makeRLearner,surv.cvglmnet)
 S3method(makeRLearner,surv.glmboost)
 S3method(makeRLearner,surv.glmnet)
 S3method(makeRLearner,surv.penalized)
@@ -168,6 +172,7 @@ S3method(predictLearner,classif.blackboost)
 S3method(predictLearner,classif.boosting)
 S3method(predictLearner,classif.cforest)
 S3method(predictLearner,classif.ctree)
+S3method(predictLearner,classif.cvglmnet)
 S3method(predictLearner,classif.fnn)
 S3method(predictLearner,classif.gbm)
 S3method(predictLearner,classif.geoDA)
@@ -209,6 +214,8 @@ S3method(predictLearner,cluster.kmeans)
 S3method(predictLearner,regr.IBk)
 S3method(predictLearner,regr.cforest)
 S3method(predictLearner,regr.crs)
+S3method(predictLearner,regr.ctree)
+S3method(predictLearner,regr.cvglmnet)
 S3method(predictLearner,regr.earth)
 S3method(predictLearner,regr.fnn)
 S3method(predictLearner,regr.gbm)
@@ -233,6 +240,7 @@ S3method(predictLearner,regr.svm)
 S3method(predictLearner,surv.CoxBoost)
 S3method(predictLearner,surv.cforest)
 S3method(predictLearner,surv.coxph)
+S3method(predictLearner,surv.cvglmnet)
 S3method(predictLearner,surv.glmboost)
 S3method(predictLearner,surv.glmnet)
 S3method(predictLearner,surv.penalized)
@@ -317,6 +325,7 @@ S3method(trainLearner,classif.blackboost)
 S3method(trainLearner,classif.boosting)
 S3method(trainLearner,classif.cforest)
 S3method(trainLearner,classif.ctree)
+S3method(trainLearner,classif.cvglmnet)
 S3method(trainLearner,classif.fnn)
 S3method(trainLearner,classif.gbm)
 S3method(trainLearner,classif.geoDA)
@@ -358,6 +367,8 @@ S3method(trainLearner,cluster.kmeans)
 S3method(trainLearner,regr.IBk)
 S3method(trainLearner,regr.cforest)
 S3method(trainLearner,regr.crs)
+S3method(trainLearner,regr.ctree)
+S3method(trainLearner,regr.cvglmnet)
 S3method(trainLearner,regr.earth)
 S3method(trainLearner,regr.fnn)
 S3method(trainLearner,regr.gbm)
@@ -382,6 +393,7 @@ S3method(trainLearner,regr.svm)
 S3method(trainLearner,surv.CoxBoost)
 S3method(trainLearner,surv.cforest)
 S3method(trainLearner,surv.coxph)
+S3method(trainLearner,surv.cvglmnet)
 S3method(trainLearner,surv.glmboost)
 S3method(trainLearner,surv.glmnet)
 S3method(trainLearner,surv.penalized)
