add tests and extend description

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -430,6 +430,7 @@ export(fp)
 export(fpr)
 export(getAggrPerformances)
 export(getBaggingModels)
+export(getBaseLearnerPredictions)
 export(getConfMatrix)
 export(getCostSensClassifModel)
 export(getCostSensRegrModels)
