--- a/tutorial/mkdocs.yml
+++ b/tutorial/mkdocs.yml
@@ -13,10 +13,14 @@ pages:
 - ["benchmark_experiments.md", "Basics", "Benchmark Experiments"]
 - ["parallelization.md", "Basics", "Parallelization"]
 - ["configureMlr.md", "Advanced", "Configuration"]
-- ["feature_selection.md", "Advanced", "Feature selection"]
-- ["roc_analysis.md", "Advanced", "ROC analysis"]
-- ["multicriteria_evaluation.md", "Advanced", "Multicriteria Evaluation"]
+- ["wrapper.md", "Advanced", "Wrapper"]
+- ["makeBaggingWrapper.md", "Advanced", "Bagging"]
 - ["tune.md", "Advanced", "Tuning"]
+- ["feature_selection.md", "Advanced", "Feature Selection"]
+- ["cost_sensitive_classif.md", "Advanced", "Cost-Sensitive Classification"]
 - ["over_and_undersampling.md", "Advanced", "Over- and Undersampling"]
-- ["create_learner.md", "Extend", "Create custom learners"]
-- ["create_measure.md", "Extend", "Create custom measures"]
+- ["roc_analysis.md", "Advanced", "ROC Analysis"]
+- ["create_learner.md", "Extend", "Create Custom Learners"]
+- ["create_measure.md", "Extend", "Create Custom Measures"]
+- ["integrated_learners.md", "Appendix", "Integrated Learners"]
+- ["measures.md", "Appendix", "Performance Measures"]
