changed some section titles

--- a/tutorial/mkdocs.yml
+++ b/tutorial/mkdocs.yml
@@ -13,14 +13,14 @@ pages:
 - ["benchmark_experiments.md", "Basics", "Benchmark Experiments"]
 - ["parallelization.md", "Basics", "Parallelization"]
 - ["configureMlr.md", "Advanced", "Configuration"]
-- ["wrapper.md", "Advanced", "Wrapper"]
+- ["wrapper.md", "Advanced", "Wrapped Learners"]
 - ["makeBaggingWrapper.md", "Advanced", "Bagging"]
 - ["tune.md", "Advanced", "Tuning"]
 - ["feature_selection.md", "Advanced", "Feature Selection"]
 - ["cost_sensitive_classif.md", "Advanced", "Cost-Sensitive Classification"]
-- ["over_and_undersampling.md", "Advanced", "Over- and Undersampling"]
+- ["over_and_undersampling.md", "Advanced", "Imbalanced Classification Problems"]
 - ["roc_analysis.md", "Advanced", "ROC Analysis"]
 - ["create_learner.md", "Extend", "Create Custom Learners"]
 - ["create_measure.md", "Extend", "Create Custom Measures"]
 - ["integrated_learners.md", "Appendix", "Integrated Learners"]
-- ["measures.md", "Appendix", "Performance Measures"]
+- ["measures.md", "Appendix", "Implemented Performance Measures"]
