--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ before_install:
 install:
   - ./travis-tool.sh aptget_install r-cran-rjava
   - sudo R CMD javareconf
-  - ./travis-tool.sh github_package testthat
-  - ./travis-tool.sh github_package assertthat
+  - ./travis-tool.sh github_package hadley/testthat
+  - ./travis-tool.sh github_package hadley/assertthat
   - ./travis-tool.sh github_package berndbischl/BBmisc
   - ./travis-tool.sh github_package berndbischl/parallelMap
   - ./travis-tool.sh github_package berndbischl/ParamHelpers
