--- a/tutorial/build
+++ b/tutorial/build
@@ -10,10 +10,10 @@ dest = "docs"
 # - [&PACKAGE::FUNCTION]
 # - [&FUNCTION] (mlr documentation)
 macros = list(
-  list(pattern = "\\[(.+)\\]\\(&([[:alnum:]]+)::([[:alnum:]]+)\\)", replacement = "[\\1](http://www.rdocumentation.org/packages/\\2/functions/\\3.html)"),
-  list(pattern = "\\[(.+)\\]\\(&([[:alnum:]]+)\\)", replacement = "[\\1](http://www.rdocumentation.org/packages/mlr/functions/\\2.html)"),
-  list(pattern = "\\[&([[:alnum:]]+)::([[:alnum:]]+)\\]", replacement = "[\\1::\\2](http://www.rdocumentation.org/packages/\\1/functions/\\2.html)"),
-  list(pattern = "\\[&([[:alnum:]]+)\\]", replacement = "[\\1](http://www.rdocumentation.org/packages/mlr/functions/\\1.html)")
+  list(pattern = "\\[(.+?)\\]\\(&([[:alnum:]]+?)::([[:alnum:]]+)\\)", replacement = "[\\1](http://www.rdocumentation.org/packages/\\2/functions/\\3.html)"),
+  list(pattern = "\\[(.+?)\\]\\(&([[:alnum:]]+?)\\)", replacement = "[\\1](http://www.rdocumentation.org/packages/mlr/functions/\\2.html)"),
+  list(pattern = "\\[&([[:alnum:]]+?)::([[:alnum:]]+?)\\]", replacement = "[\\1::\\2](http://www.rdocumentation.org/packages/\\1/functions/\\2.html)"),
+  list(pattern = "\\[&([[:alnum:]]+?)\\]", replacement = "[\\1](http://www.rdocumentation.org/packages/mlr/functions/\\1.html)")
 )
 
 # helper functions #############################################################
