wrapper, impute, bagging ...

--- a/tutorial/mkdocs.yml
+++ b/tutorial/mkdocs.yml
@@ -14,7 +14,9 @@ pages:
 - ["parallelization.md", "Basics", "Parallelization"]
 - ["configureMlr.md", "Advanced", "Configuration"]
 - ["wrapper.md", "Advanced", "Wrapped Learners"]
-- ["makeBaggingWrapper.md", "Advanced", "Bagging"]
+- ["preproc.md", "Advanced", "Preprocessing"]
+- ["impute.md", "Advanced", "Imputations"]
+- ["bagging.md", "Advanced", "Bagging"]
 - ["tune.md", "Advanced", "Tuning"]
 - ["feature_selection.md", "Advanced", "Feature Selection"]
 - ["cost_sensitive_classif.md", "Advanced", "Cost-Sensitive Classification"]
