add forresters reinterpolation method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,6 +109,7 @@ S3method(makeRLearner,regr.gbm)
 S3method(makeRLearner,regr.glmnet)
 S3method(makeRLearner,regr.kknn)
 S3method(makeRLearner,regr.km)
+S3method(makeRLearner,regr.kmforrester)
 S3method(makeRLearner,regr.ksvm)
 S3method(makeRLearner,regr.lm)
 S3method(makeRLearner,regr.mars)
@@ -215,6 +216,7 @@ S3method(predictLearner,regr.gbm)
 S3method(predictLearner,regr.glmnet)
 S3method(predictLearner,regr.kknn)
 S3method(predictLearner,regr.km)
+S3method(predictLearner,regr.kmforrester)
 S3method(predictLearner,regr.ksvm)
 S3method(predictLearner,regr.lm)
 S3method(predictLearner,regr.mars)
@@ -366,6 +368,7 @@ S3method(trainLearner,regr.gbm)
 S3method(trainLearner,regr.glmnet)
 S3method(trainLearner,regr.kknn)
 S3method(trainLearner,regr.km)
+S3method(trainLearner,regr.kmforrester)
 S3method(trainLearner,regr.ksvm)
 S3method(trainLearner,regr.lm)
 S3method(trainLearner,regr.mars)
