--- a/NAMESPACE
+++ b/NAMESPACE
@@ -599,6 +599,7 @@ export(undersample)
 import(BBmisc)
 import(ParamHelpers)
 import(checkmate)
+import(ggplot2)
 import(parallelMap)
 importFrom(codetools,findGlobals)
 importFrom(stats,predict)
