--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,10 @@ Description: Interface to a large number of classification and regression
     allowing for easy nested resampling. Most operations can be parallelized.
 Authors@R: c(person("Bernd", "Bischl", email = "bernd_bischl@gmx.net", role =
     c("aut", "cre")), person("Michel", "Lang", email =
-    "michellang@gmail.com", role = "aut"), person("Jakob", "Bossek",
+    "michellang@gmail.com", role = "aut"), person("Jakob", "Richter", email =
+    "code@jakob-r.de", role = "aut"), person("Jakob", "Bossek",
     email = "jakob.bossek@tu-dortmund.de", role = "aut"), person("Leonard",
     "Judt", email = "leonard.judt@tu-dortmund.de", role = "aut"),
-    person("Jakob", "Richter", email = "code@jakob-r.de", role = "aut"),
     person("Tobias", "Kuehn", email = "tobi.kuehn@gmx.de", role = "aut"),
     person("Erich", "Studerus", email = "erich.studerus@upkbs.ch", role =
     "aut"), person("Lars", "Kotthoff", email =
