--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -68,10 +68,12 @@ Suggests:
     klaR,
     lqa,
     LiblineaR,
+    MASS,
     mboost,
     mco,
     mda,
     mlbench,
+    modeltools,
     mRMRe,
     nnet,
     party,
