--- a/tutorial/build
+++ b/tutorial/build
@@ -42,7 +42,7 @@ knitIt = function(f) {
     lines = str_replace_all(lines, macro$pattern, macro$replacement)
 
   cache.path = paste0(file.path("cache", f), .Platform$file.sep)
-  opts_chunk$set(cache = TRUE, cache.path = cache.path, dev = "svg", error = FALSE)
+  opts_chunk$set(cache = TRUE, cache.path = cache.path, dev = "svg", error = FALSE, comment = "#>")
   setSeed(f)
   knit(
     text = lines,
