moved CoxBoost learner to optimCoxBoostPenalty; added version w/o cv

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -129,6 +129,7 @@ S3method(makeRLearner,surv.coxph)
 S3method(makeRLearner,surv.cvglmnet)
 S3method(makeRLearner,surv.glmboost)
 S3method(makeRLearner,surv.glmnet)
+S3method(makeRLearner,surv.optimCoxBoostPenalty)
 S3method(makeRLearner,surv.penalized)
 S3method(makeRLearner,surv.randomForestSRC)
 S3method(makeWrappedModel,BaggingWrapper)
@@ -228,12 +229,12 @@ S3method(predictLearner,regr.rpart)
 S3method(predictLearner,regr.rsm)
 S3method(predictLearner,regr.rvm)
 S3method(predictLearner,regr.svm)
-S3method(predictLearner,surv.CoxBoost)
 S3method(predictLearner,surv.cforest)
 S3method(predictLearner,surv.coxph)
 S3method(predictLearner,surv.cvglmnet)
 S3method(predictLearner,surv.glmboost)
 S3method(predictLearner,surv.glmnet)
+S3method(predictLearner,surv.optimCoxBoostPenalty)
 S3method(predictLearner,surv.penalized)
 S3method(predictLearner,surv.randomForestSRC)
 S3method(print,Aggregation)
@@ -384,6 +385,7 @@ S3method(trainLearner,surv.coxph)
 S3method(trainLearner,surv.cvglmnet)
 S3method(trainLearner,surv.glmboost)
 S3method(trainLearner,surv.glmnet)
+S3method(trainLearner,surv.optimCoxBoostPenalty)
 S3method(trainLearner,surv.penalized)
 S3method(trainLearner,surv.randomForestSRC)
 export(G1)
