fixed surv learners

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -229,6 +229,7 @@ S3method(predictLearner,regr.rpart)
 S3method(predictLearner,regr.rsm)
 S3method(predictLearner,regr.rvm)
 S3method(predictLearner,regr.svm)
+S3method(predictLearner,surv.CoxBoost)
 S3method(predictLearner,surv.cforest)
 S3method(predictLearner,surv.coxph)
 S3method(predictLearner,surv.cvglmnet)
