updated feature selection, moved table of filter methods to the appendix

--- a/tutorial/mkdocs.yml
+++ b/tutorial/mkdocs.yml
@@ -27,4 +27,5 @@ pages:
 - ["example_tasks.md", "Appendix", "Example Tasks"]
 - ["integrated_learners.md", "Appendix", "Integrated Learners"]
 - ["measures.md", "Appendix", "Implemented Performance Measures"]
+- ["filter_methods.md", "Appendix", "Integrated Filter Methods"]
 
