better getters for BenchMarkResult

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,6 @@ S3method(downsample,ResampleInstance)
 S3method(downsample,Task)
 S3method(estimateResidualVariance,Learner)
 S3method(estimateResidualVariance,WrappedModel)
-S3method(getAggrPerformances,BenchmarkResult)
 S3method(getFailureModelMsg,BaggingModel)
 S3method(getFailureModelMsg,CostSensWeightedPairsModel)
 S3method(getFailureModelMsg,WrappedModel)
@@ -26,10 +25,6 @@ S3method(getHyperPars,Learner)
 S3method(getLearnerModel,WrappedModel)
 S3method(getParamSet,BaseWrapper)
 S3method(getParamSet,Learner)
-S3method(getPerformances,BenchmarkResult)
-S3method(getPredictions,BenchmarkResult)
-S3method(getTuneResult,BenchmarkResult)
-S3method(getTuneResult,WrappedModel)
 S3method(isFailureModel,BaggingModel)
 S3method(isFailureModel,CostSensWeightedPairsModel)
 S3method(isFailureModel,MulticlassModel)
@@ -422,7 +417,12 @@ export(fn)
 export(fnr)
 export(fp)
 export(fpr)
-export(getAggrPerformances)
+export(getBMRAggrPerformances)
+export(getBMRLearnerIds)
+export(getBMRPerformances)
+export(getBMRPredictions)
+export(getBMRTaskIds)
+export(getBMRTuneResults)
 export(getBaggingModels)
 export(getConfMatrix)
 export(getCostSensClassifModel)
@@ -437,8 +437,6 @@ export(getHyperPars)
 export(getLearnerModel)
 export(getMlrOptions)
 export(getParamSet)
-export(getPerformances)
-export(getPredictions)
 export(getProbabilities)
 export(getStackedBaseLearnerPredictions)
 export(getTaskCosts)
