--- a/NAMESPACE
+++ b/NAMESPACE
@@ -443,6 +443,7 @@ export(getTaskFormula)
 export(getTaskFormulaAsString)
 export(getTaskNFeats)
 export(getTaskTargets)
+export(getTaskType)
 export(getTuneResult)
 export(gmean)
 export(gpr)
