plotViperCharts + increase version to 2.3 and require newest versions of our own stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -536,6 +536,7 @@ export(plotFilterValues)
 export(plotLearnerPrediction)
 export(plotThreshVsPerf)
 export(plotTuneMultiCritResult)
+export(plotViperCharts)
 export(ppv)
 export(predictLearner)
 export(reimpute)
