zip everything to get a downloadable tutorial file

--- a/tutorial/build
+++ b/tutorial/build
@@ -89,6 +89,10 @@ dummy = lapply(list.files(src, pattern = "\\.Rmd$"), knitIt)
 ok = system3("mkdocs", "build")
 if(ok$exit.code == 0L) {
   message("Build successfull!")
+  message("Now zip everything!")
+  setwd("html/")
+  zip("../tutorial.zip", files = "/")
+  setwd("../")
   # clean up
   unlink("figure", recursive = TRUE)
   exit(0L)
