--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -83,13 +83,15 @@ Suggests:
     pROC,
     randomForest,
     randomForestSRC,
+    RCurl,
     reshape2,
-    rrlda,
+    rjson,
     robustbase,
+    ROCR,
     rpart,
+    rrlda,
     rsm,
     RWeka,
-    ROCR,
     sda,
     stepPlr,
     TH.data
