export viper plotting functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,6 +131,9 @@ S3method(makeWrappedModel,CostSensWeightedPairsWrapper)
 S3method(makeWrappedModel,Learner)
 S3method(makeWrappedModel,MulticlassWrapper)
 S3method(makeWrappedModel,OptWrapper)
+S3method(plotViperCharts,BenchmarkResult)
+S3method(plotViperCharts,Prediction)
+S3method(plotViperCharts,list)
 S3method(predict,WrappedModel)
 S3method(predictLearner,BaggingWrapper)
 S3method(predictLearner,BaseWrapper)
