--- a/NAMESPACE
+++ b/NAMESPACE
@@ -444,7 +444,9 @@ export(getTaskData)
 export(getTaskFeatureNames)
 export(getTaskFormula)
 export(getTaskFormulaAsString)
+export(getTaskId)
 export(getTaskNFeats)
+export(getTaskTargetNames)
 export(getTaskTargets)
 export(getTaskType)
 export(getTuneResult)
