--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ S3method(getFailureModelMsg,WrappedModel)
 S3method(getHyperPars,BaseEnsemble)
 S3method(getHyperPars,BaseWrapper)
 S3method(getHyperPars,Learner)
+S3method(getLearnerModel,BaseWrapperModel)
 S3method(getLearnerModel,WrappedModel)
 S3method(getParamSet,BaseWrapper)
 S3method(getParamSet,Learner)
@@ -94,6 +95,7 @@ S3method(makeRLearner,regr.cforest)
 S3method(makeRLearner,regr.crs)
 S3method(makeRLearner,regr.ctree)
 S3method(makeRLearner,regr.earth)
+S3method(makeRLearner,regr.elmNN)
 S3method(makeRLearner,regr.fnn)
 S3method(makeRLearner,regr.gbm)
 S3method(makeRLearner,regr.glmnet)
@@ -203,6 +205,7 @@ S3method(predictLearner,regr.cforest)
 S3method(predictLearner,regr.crs)
 S3method(predictLearner,regr.ctree)
 S3method(predictLearner,regr.earth)
+S3method(predictLearner,regr.elmNN)
 S3method(predictLearner,regr.fnn)
 S3method(predictLearner,regr.gbm)
 S3method(predictLearner,regr.glmnet)
@@ -354,6 +357,7 @@ S3method(trainLearner,regr.cforest)
 S3method(trainLearner,regr.crs)
 S3method(trainLearner,regr.ctree)
 S3method(trainLearner,regr.earth)
+S3method(trainLearner,regr.elmNN)
 S3method(trainLearner,regr.fnn)
 S3method(trainLearner,regr.gbm)
 S3method(trainLearner,regr.glmnet)
