added cv-auto selection to glmboost (default: off)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,7 @@ S3method(makeRLearner,surv.coxph)
 S3method(makeRLearner,surv.cvglmnet)
 S3method(makeRLearner,surv.glmboost)
 S3method(makeRLearner,surv.glmnet)
+S3method(makeRLearner,surv.optimCoxBoostPenalty)
 S3method(makeRLearner,surv.penalized)
 S3method(makeRLearner,surv.randomForestSRC)
 S3method(makeRLearner,surv.rpart)
@@ -232,6 +233,7 @@ S3method(predictLearner,surv.coxph)
 S3method(predictLearner,surv.cvglmnet)
 S3method(predictLearner,surv.glmboost)
 S3method(predictLearner,surv.glmnet)
+S3method(predictLearner,surv.optimCoxBoostPenalty)
 S3method(predictLearner,surv.penalized)
 S3method(predictLearner,surv.randomForestSRC)
 S3method(predictLearner,surv.rpart)
@@ -384,6 +386,7 @@ S3method(trainLearner,surv.coxph)
 S3method(trainLearner,surv.cvglmnet)
 S3method(trainLearner,surv.glmboost)
 S3method(trainLearner,surv.glmnet)
+S3method(trainLearner,surv.optimCoxBoostPenalty)
 S3method(trainLearner,surv.penalized)
 S3method(trainLearner,surv.randomForestSRC)
 S3method(trainLearner,surv.rpart)
