--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,7 @@ S3method(makeRLearner,classif.rpart)
 S3method(makeRLearner,classif.rrlda)
 S3method(makeRLearner,classif.sda)
 S3method(makeRLearner,classif.svm)
+S3method(makeRLearner,classif.xgboost)
 S3method(makeRLearner,cluster.DBScan)
 S3method(makeRLearner,cluster.EM)
 S3method(makeRLearner,cluster.FarthestFirst)
@@ -116,6 +117,7 @@ S3method(makeRLearner,regr.rpart)
 S3method(makeRLearner,regr.rsm)
 S3method(makeRLearner,regr.rvm)
 S3method(makeRLearner,regr.svm)
+S3method(makeRLearner,regr.xgboost)
 S3method(makeRLearner,surv.CoxBoost)
 S3method(makeRLearner,surv.cforest)
 S3method(makeRLearner,surv.coxph)
@@ -194,6 +196,7 @@ S3method(predictLearner,classif.rpart)
 S3method(predictLearner,classif.rrlda)
 S3method(predictLearner,classif.sda)
 S3method(predictLearner,classif.svm)
+S3method(predictLearner,classif.xgboost)
 S3method(predictLearner,cluster.DBScan)
 S3method(predictLearner,cluster.EM)
 S3method(predictLearner,cluster.FarthestFirst)
@@ -227,6 +230,7 @@ S3method(predictLearner,regr.rpart)
 S3method(predictLearner,regr.rsm)
 S3method(predictLearner,regr.rvm)
 S3method(predictLearner,regr.svm)
+S3method(predictLearner,regr.xgboost)
 S3method(predictLearner,surv.CoxBoost)
 S3method(predictLearner,surv.cforest)
 S3method(predictLearner,surv.coxph)
@@ -347,6 +351,7 @@ S3method(trainLearner,classif.rpart)
 S3method(trainLearner,classif.rrlda)
 S3method(trainLearner,classif.sda)
 S3method(trainLearner,classif.svm)
+S3method(trainLearner,classif.xgboost)
 S3method(trainLearner,cluster.DBScan)
 S3method(trainLearner,cluster.EM)
 S3method(trainLearner,cluster.FarthestFirst)
@@ -380,6 +385,7 @@ S3method(trainLearner,regr.rpart)
 S3method(trainLearner,regr.rsm)
 S3method(trainLearner,regr.rvm)
 S3method(trainLearner,regr.svm)
+S3method(trainLearner,regr.xgboost)
 S3method(trainLearner,surv.CoxBoost)
 S3method(trainLearner,surv.cforest)
 S3method(trainLearner,surv.coxph)
