--- a/NAMESPACE
+++ b/NAMESPACE
@@ -274,7 +274,6 @@ S3method(print,TuneResult)
 S3method(print,UnsupervisedTask)
 S3method(print,WrappedModel)
 S3method(reimpute,data.frame)
-S3method(reimpute,list)
 S3method(removeHyperPars,BaseEnsemble)
 S3method(removeHyperPars,BaseWrapper)
 S3method(removeHyperPars,Learner)
@@ -558,6 +557,7 @@ export(plotViperCharts)
 export(ppv)
 export(predictLearner)
 export(reimpute)
+export(reimpute.list)
 export(removeConstantFeatures)
 export(removeHyperPars)
 export(removeProperties)
