ResampleResult object and doc fixes fixes #195

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -264,6 +264,7 @@ S3method(print,RepCVDesc)
 S3method(print,ResampleDesc)
 S3method(print,ResampleInstance)
 S3method(print,ResamplePrediction)
+S3method(print,ResampleResult)
 S3method(print,SubsampleDesc)
 S3method(print,SupervisedTask)
 S3method(print,Task)
