fixed bernds email

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ branches:
 notifications:
   email:
     recipients:
-        - bernd_bischl@gmx.de
+        - bernd_bischl@gmx.net
         - michellang@gmail.com
         - jakob1richter@gmail.com
         - lars.kotthoff@insight-centre.org
