ModelMultiplexer hopefully fixed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,11 +19,13 @@ S3method(getHyperPars,BaseEnsemble)
 S3method(getHyperPars,BaseWrapper)
 S3method(getHyperPars,Learner)
 S3method(getLearnerModel,BaseWrapperModel)
+S3method(getLearnerModel,ModelMultiplexerModel)
 S3method(getLearnerModel,WrappedModel)
 S3method(getParamSet,BaseWrapper)
 S3method(getParamSet,Learner)
 S3method(isFailureModel,BaggingModel)
 S3method(isFailureModel,CostSensWeightedPairsModel)
+S3method(isFailureModel,ModelMultiplexerModel)
 S3method(isFailureModel,MulticlassModel)
 S3method(isFailureModel,WrappedModel)
 S3method(joinClassLevels,ClassifTask)
@@ -134,6 +136,7 @@ S3method(makeWrappedModel,CostSensClassifWrapper)
 S3method(makeWrappedModel,CostSensRegrWrapper)
 S3method(makeWrappedModel,CostSensWeightedPairsWrapper)
 S3method(makeWrappedModel,Learner)
+S3method(makeWrappedModel,ModelMultiplexer)
 S3method(makeWrappedModel,MulticlassWrapper)
 S3method(makeWrappedModel,OptWrapper)
 S3method(plotViperCharts,BenchmarkResult)
@@ -275,6 +278,7 @@ S3method(print,TuneResult)
 S3method(print,UnsupervisedTask)
 S3method(print,WrappedModel)
 S3method(reimpute,data.frame)
+S3method(reimpute,list)
 S3method(removeHyperPars,BaseEnsemble)
 S3method(removeHyperPars,BaseWrapper)
 S3method(removeHyperPars,Learner)
@@ -558,7 +562,6 @@ export(plotViperCharts)
 export(ppv)
 export(predictLearner)
 export(reimpute)
-export(reimpute.list)
 export(removeConstantFeatures)
 export(removeHyperPars)
 export(removeProperties)
