--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,10 +23,10 @@ S3method(getLearnerModel,ModelMultiplexerModel)
 S3method(getLearnerModel,WrappedModel)
 S3method(getParamSet,BaseWrapper)
 S3method(getParamSet,Learner)
-S3method(isFailureModel,BaggingModel)
-S3method(isFailureModel,CostSensWeightedPairsModel)
+S3method(isFailureModel,BaseWrapperModel)
+S3method(isFailureModel,FailureModel)
+S3method(isFailureModel,HomogeneousEnsembleModel)
 S3method(isFailureModel,ModelMultiplexerModel)
-S3method(isFailureModel,MulticlassModel)
 S3method(isFailureModel,WrappedModel)
 S3method(joinClassLevels,ClassifTask)
 S3method(listLearners,Task)
@@ -130,15 +130,10 @@ S3method(makeRLearner,surv.optimCoxBoostPenalty)
 S3method(makeRLearner,surv.penalized)
 S3method(makeRLearner,surv.randomForestSRC)
 S3method(makeRLearner,surv.rpart)
-S3method(makeWrappedModel,BaggingWrapper)
+S3method(makeWrappedModel,BaseEnsemble)
 S3method(makeWrappedModel,BaseWrapper)
-S3method(makeWrappedModel,CostSensClassifWrapper)
-S3method(makeWrappedModel,CostSensRegrWrapper)
-S3method(makeWrappedModel,CostSensWeightedPairsWrapper)
 S3method(makeWrappedModel,Learner)
 S3method(makeWrappedModel,ModelMultiplexer)
-S3method(makeWrappedModel,MulticlassWrapper)
-S3method(makeWrappedModel,OptWrapper)
 S3method(plotViperCharts,BenchmarkResult)
 S3method(plotViperCharts,Prediction)
 S3method(plotViperCharts,list)
@@ -244,39 +239,6 @@ S3method(predictLearner,surv.optimCoxBoostPenalty)
 S3method(predictLearner,surv.penalized)
 S3method(predictLearner,surv.randomForestSRC)
 S3method(predictLearner,surv.rpart)
-S3method(print,Aggregation)
-S3method(print,BaggingModel)
-S3method(print,BaseWrapper)
-S3method(print,BaseWrapperModel)
-S3method(print,BenchmarkResult)
-S3method(print,ClassifTask)
-S3method(print,ClusterTask)
-S3method(print,CostSensTask)
-S3method(print,FailureModel)
-S3method(print,FeatSelControl)
-S3method(print,FeatSelResult)
-S3method(print,Filter)
-S3method(print,FilterValues)
-S3method(print,HoldoutDesc)
-S3method(print,ImputationDesc)
-S3method(print,Learner)
-S3method(print,Measure)
-S3method(print,OptModel)
-S3method(print,Prediction)
-S3method(print,RepCVDesc)
-S3method(print,ResampleDesc)
-S3method(print,ResampleInstance)
-S3method(print,ResamplePrediction)
-S3method(print,ResampleResult)
-S3method(print,SubsampleDesc)
-S3method(print,SupervisedTask)
-S3method(print,Task)
-S3method(print,TuneControl)
-S3method(print,TuneMultiCritControl)
-S3method(print,TuneMultiCritResult)
-S3method(print,TuneResult)
-S3method(print,UnsupervisedTask)
-S3method(print,WrappedModel)
 S3method(reimpute,data.frame)
 S3method(reimpute,list)
 S3method(removeHyperPars,BaseEnsemble)
@@ -444,12 +406,11 @@ export(getBMRTuneResults)
 export(getBaggingModels)
 export(getConfMatrix)
 export(getCostSensClassifModel)
-export(getCostSensRegrModels)
-export(getCostSensWeightedPairsModels)
 export(getFailureModelMsg)
 export(getFeatSelResult)
 export(getFilterValues)
 export(getFilteredFeatures)
+export(getHomogeneousEnsembleModels)
 export(getHyperPars)
 export(getLearnerModel)
 export(getMlrOptions)
@@ -561,6 +522,39 @@ export(plotTuneMultiCritResult)
 export(plotViperCharts)
 export(ppv)
 export(predictLearner)
+export(print.Aggregation)
+export(print.BaggingModel)
+export(print.BaseWrapper)
+export(print.BaseWrapperModel)
+export(print.BenchmarkResult)
+export(print.ClassifTask)
+export(print.ClusterTask)
+export(print.CostSensTask)
+export(print.FailureModel)
+export(print.FeatSelControl)
+export(print.FeatSelResult)
+export(print.Filter)
+export(print.FilterValues)
+export(print.HoldoutDesc)
+export(print.ImputationDesc)
+export(print.Learner)
+export(print.Measure)
+export(print.OptModel)
+export(print.Prediction)
+export(print.RepCVDesc)
+export(print.ResampleDesc)
+export(print.ResampleInstance)
+export(print.ResamplePrediction)
+export(print.ResampleResult)
+export(print.SubsampleDesc)
+export(print.SupervisedTask)
+export(print.Task)
+export(print.TuneControl)
+export(print.TuneMultiCritControl)
+export(print.TuneMultiCritResult)
+export(print.TuneResult)
+export(print.UnsupervisedTask)
+export(print.WrappedModel)
 export(reimpute)
 export(removeConstantFeatures)
 export(removeHyperPars)
