--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,9 @@ S3method(downsample,ResampleInstance)
 S3method(downsample,Task)
 S3method(estimateResidualVariance,Learner)
 S3method(estimateResidualVariance,WrappedModel)
-S3method(getFailureModelMsg,BaggingModel)
-S3method(getFailureModelMsg,CostSensWeightedPairsModel)
+S3method(getFailureModelMsg,BaseWrapperModel)
+S3method(getFailureModelMsg,FailureModel)
+S3method(getFailureModelMsg,HomogeneousEnsembleModel)
 S3method(getFailureModelMsg,WrappedModel)
 S3method(getHyperPars,BaseEnsemble)
 S3method(getHyperPars,BaseWrapper)
@@ -436,9 +437,7 @@ export(getBMRPerformances)
 export(getBMRPredictions)
 export(getBMRTaskIds)
 export(getBMRTuneResults)
-export(getBaggingModels)
 export(getConfMatrix)
-export(getCostSensClassifModel)
 export(getFailureModelMsg)
 export(getFeatSelResult)
 export(getFilterValues)
