new fun: plotROCRCurves

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,6 +135,9 @@ S3method(makeWrappedModel,BaseEnsemble)
 S3method(makeWrappedModel,BaseWrapper)
 S3method(makeWrappedModel,Learner)
 S3method(makeWrappedModel,ModelMultiplexer)
+S3method(plotROCRCurves,BenchmarkResult)
+S3method(plotROCRCurves,Prediction)
+S3method(plotROCRCurves,list)
 S3method(plotViperCharts,BenchmarkResult)
 S3method(plotViperCharts,Prediction)
 S3method(plotViperCharts,list)
@@ -549,6 +552,7 @@ export(oversample)
 export(performance)
 export(plotFilterValues)
 export(plotLearnerPrediction)
+export(plotROCRCurves)
 export(plotThreshVsPerf)
 export(plotTuneMultiCritResult)
 export(plotViperCharts)
