clean up roc plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -137,9 +137,11 @@ S3method(makeWrappedModel,Learner)
 S3method(makeWrappedModel,ModelMultiplexer)
 S3method(plotROCRCurves,BenchmarkResult)
 S3method(plotROCRCurves,Prediction)
+S3method(plotROCRCurves,ResampleResult)
 S3method(plotROCRCurves,list)
 S3method(plotViperCharts,BenchmarkResult)
 S3method(plotViperCharts,Prediction)
+S3method(plotViperCharts,ResampleResult)
 S3method(plotViperCharts,list)
 S3method(predict,WrappedModel)
 S3method(predictLearner,BaggingWrapper)
