PreprocWrapperICA (Work on Issue #123)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -516,6 +516,7 @@ export(makeMulticlassWrapper)
 export(makeOverBaggingWrapper)
 export(makeOversampleWrapper)
 export(makePreprocWrapper)
+export(makePreprocWrapperICA)
 export(makePreprocWrapperPCA)
 export(makeRLearner)
 export(makeRLearnerClassif)
