--- a/NAMESPACE
+++ b/NAMESPACE
@@ -459,6 +459,7 @@ export(getProbabilities)
 export(getStackedBaseLearnerPredictions)
 export(getTaskCosts)
 export(getTaskData)
+export(getTaskDescription)
 export(getTaskFeatureNames)
 export(getTaskFormula)
 export(getTaskFormulaAsString)
